kubernetes/usermanagement/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermngt-web
  labels:
    app: usermngt-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermngt-web
      tier: frontend
  template:
    metadata:
      labels:
        app: usermngt-web
        tier: frontend
    spec:
      containers:
        - name: usermngt-web
          image: dak4408/travma-usermanagement-frontend:non-aio
          imagePullPolicy: Always
          volumeMounts:
            - name: usermngt-nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          ports:
            - name: usermngt-web
              containerPort: 8081
          resources:
            requests:
              memory: "10Mi"
              cpu: "100m"
            limits:
              memory: "100Mi"
              cpu: "100Mi"
      volumes:
        - name: usermngt-nginx-config
          configMap:
            name: usermngt-nginx-config
