kubernetes/usermanagement/frontend/service.yml
kind: Service
apiVersion: v1
metadata:
  name: usermngt-web-service
spec:
  selector:
    app: usermngt-web
    tier: frontend
  ports:
  - port: 8081
    targetPort: 8081
