kubernetes/usermanagement/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travelmngt-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /users/(/|$)(.*)
        backend:
          service:
            name: usermngt-web-service
            port:
              number: 8081
